# ftp_huffman

./: CMakeLists.txt  README  README.docx  README.md  README.odt
HW2_FtpClient/: CMakeLists.txt  decoded.txt  file.txt~  file3.txt  main.cpp
HW2_FtpClient/receive/: file.txt  ftpClientN  log.txt
HW2_FtpClient/src/: FTP.h  FTPClient.cpp  FTPClient.h
HW2_FtpClient/src/tools/: Command.cpp  Command.h
HW2_FtpServer/: CMakeLists.txt  main.cpp
HW2_FtpServer/src/: FTP.h  Server.cpp  Server.h
HW2_FtpServer/src/tools/: Command.cpp  Command.h
Huffman/: CMakeLists.txt
Huffman/include/: Huffman.h  TreeNode.h
Huffman/src/huffman/: Huffman.cpp  TreeNode.cpp
